--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "secp256k1": "secp256k1/js"
   },
   "dependencies": {
-    "byteballcore": "git+https://github.com/byteball/byteballcore.git",
-    "headless-byteball": "git+https://github.com/byteball/headless-byteball.git"
+    "byteballcore": "git+https://github.com/dekuan/byteballcore.git",
+    "headless-byteball": "git+https://github.com/dekuan/headless-byteball.git"
   }
 }
